# officepilot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  BUILD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  package-lock.json  parser_benchmark.csv  update_sig.py
.github/: PULL_REQUEST_TEMPLATE.md
backend/: .env.example  README.md  _check_exec.py  _debug_exec.py  _debug_flow.py  officepilot_sidecar.py  pytest.ini  requirements.txt
backup_before_auth_merge/: routers_auth.py  services_auth.py
desktop/tauri/src-tauri/: Cargo.toml  tauri.conf.json
desktop/tauri/src-tauri/binaries/: README.md
desktop/tauri/src-tauri/capabilities/: default.json
desktop/tauri/src-tauri/icons/: README.md
desktop/tauri/src-tauri/src/: agent.rs  lib.rs  main.rs  tray.rs
docs/: ADMIN_GUIDE.md  ADMIN_MANUAL.md  AUDIT_EXPORTS.md  BACKUP_RESTORE.md  BUG_REPORTING.md  BUG_REPORT_TEMPLATE.md  CLEAN_WINDOWS_QA.md  COMPLETE_TESTING_PROCESS.md  DEMO_ASSETS_CHECKLIST.md  DEMO_CHECKLIST.md  DEMO_MODE.md  DEMO_VIDEO_3_MIN_SCRIPT.md  DEMO_VIDEO_60_SEC_SCRIPT.md  DESKTOP_BUILD.md  DESKTOP_UPDATE_AND_BILLING.md  ENTERPRISE_SAFETY.md  FEEDBACK_CAPTURE.md  FOLDER_STRUCTURE.md  FOUNDER_PITCH.md  GMAIL_READONLY_SETUP.md  INTERNAL.md  KNOWN_LIMITATIONS.md  LANDING_COPY_CHANGES.md  LOCAL_CLEANUP.md  MULTILINGUAL_VOICE_TEST_PLAN.md  NONTECHNICAL_OVERVIEW.md  NON_TECHNICAL_TESTING_GUIDE.md  ONBOARDING.md  PAGINATION.md  PERFORMANCE.md  PHASE_37_8_AUTH_UI_QA.md  PHASE_39_QA.md  PILOT_7DAY_OUTREACH_PLAN.md  PILOT_DEMO_SCRIPT.md  PILOT_FEEDBACK_SCORECARD.md  PILOT_INTERVIEW_SCRIPT.md  PILOT_LAUNCH_CHECKLIST.md  PILOT_OUTREACH_MESSAGES.md  PILOT_QUALIFICATION_QUESTIONS.md  PILOT_READINESS.md  (+19 more)
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  playwright.config.js  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts
marketing/: README.md  screenshot_accounting_sync.md  screenshot_audit_restore.md  screenshot_excel_export.md  screenshot_invoice_review.md  screenshot_safety_policy.md  screenshot_voice_screen.md
samples/: README.md  sample_invoice_report.csv  sample_sales.xlsx
(+575 files in other folders)
