[package]
name = "officepilot-desktop"
version = "1.0.0"
description = "Local-first Windows desktop shell for OfficePilot AI"
authors = ["OfficePilot"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "officepilot_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["tray-icon"] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-global-shortcut = "2.0"
# Phase 8 — auto-update. The plugin is wired in lib.rs behind a
# build-time check; the public endpoint and manifest paths are
# scaffolded but **not** enabled by default. See TODO in lib.rs.
tauri-plugin-updater = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
parking_lot = "0.12"

# Real HTTP probe for the sidecar health endpoint. We always
# enable this so the supervisor can distinguish "port is open
# but uvicorn is dead" from "agent is healthy".
ureq = { version = "2", default-features = false, features = ["tls", "json"] }

# Phase 36B — upater diagnostic. Same reqwest+TLS stack as the
# updater plugin, used here to test HTTPS connectivity to the
# update manifest endpoint at startup.
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }

# Tauri 2 already depends on tokio internally; we add it here
# so the async health-probe task can use ``tokio::time::sleep``
# (tauri's ``async_runtime`` does not re-export the time module).
tokio = { version = "1", default-features = false, features = ["time", "rt"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# Historical name kept for forward compatibility; equivalent to
# the default. The feature used to be opt-in for the ureq-probe.
ureq-probe = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
